added a missing paragraph

--- a/contextuality/contextuality.tex
+++ b/contextuality/contextuality.tex
@@ -125,6 +125,13 @@ so studied! In that regard, let us have a look at one of the papers reveling on
 of the deepest links in my opinion: the 2011 paper by S. Abramsky and A.
 Brandenburger \cite{AB11}.
 
+In this paper, the authors show that non locality and quantum contextuality are
+in fact two ways to look at the same situation. And in a much deeper level, that
+some of the concepts having a role in those meta properties are in fact not
+necessarily related to quantum mechanics specifically but in a more general way
+to the mathematical specificities of the probability distribution of the
+associated measurement results.
+
 \section{Link with finite geometries}
 \label{sec:link_with_finite_geometries}
 
