took into considerations Jonas's remarks

--- a/contextuality/lib.bib
+++ b/contextuality/lib.bib
@@ -14,6 +14,22 @@
   author = {Abramsky, S. and Brandenburger, A.}
 }
 
+@article{BHG+22,
+  title = {Contextuality Degree of Quadrics in Multi-Qubit Symplectic Polar Spaces},
+  year = {2022},
+  month = nov,
+  journal = {Journal of Physics A: Mathematical and Theoretical},
+  volume = {55},
+  number = {47},
+  pages = {475301},
+  publisher = {{IOP Publishing}},
+  issn = {1751-8121},
+  doi = {10.1088/1751-8121/aca36f},
+  langid = {english},
+  note = {\url{https://dx.doi.org/10.1088/1751-8121/aca36f}},
+  author = {Boutray, H. d. and Holweck, F. and Giorgetti, A. and Masson, P. and Saniga, M.}
+}
+
 @article{CEG96,
   title = {Bell-{{Kochen-Specker}} Theorem: {{A}} Proof with 18 Vectors},
   shorttitle = {Bell-{{Kochen-Specker}} Theorem},
@@ -29,23 +45,6 @@
   keywords = {Bell-Kochen-Specker theorem,Hardy's theorem},
   note = {\url{http://www.sciencedirect.com/science/article/pii/037596019600134X}},
   author = {Cabello, A. and Estebaranz, J. M. and Garc\'ia-Alcaine, G.}
-}
-
-@article{dHG+22,
-  title = {Contextuality Degree of Quadrics in Multi-Qubit Symplectic Polar Spaces},
-  year = {2022},
-  month = nov,
-  journal = {Journal of Physics A: Mathematical and Theoretical},
-  volume = {55},
-  number = {47},
-  pages = {475301},
-  publisher = {{IOP Publishing}},
-  issn = {1751-8121},
-  doi = {10.1088/1751-8121/aca36f},
-  copyright = {All rights reserved},
-  langid = {english},
-  note = {\url{https://dx.doi.org/10.1088/1751-8121/aca36f}},
-  author = {de Boutray, H. and Holweck, F. and Giorgetti, A. and Masson, P. and Saniga, M.}
 }
 
 @article{EPR35,
